# pricing_rule

./: README.md
discount_control/: .gitignore  README.md  pyproject.toml
discount_control/discount_control/: hooks.py  modules.txt
discount_control/discount_control/discount_control/doctype/item_group_discount_rule/: item_group_discount_rule.js  item_group_discount_rule.json  item_group_discount_rule.py
discount_control/discount_control/fixtures/: custom_field.json  workflow.json  workflow_state.json
discount_control/discount_control/overrides/: sales_order_check.py
norwa_pricing_rules/norwa_pricing_rules/: hooks.py  modules.txt  norwa_pricing_rules.py
norwa_pricing_rules/norwa_pricing_rules.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
norwa_pricing_rules/norwa_pricing_rules/api/: discount_hooks.py  purchase_receipt_hooks.py
norwa_pricing_rules/norwa_pricing_rules/fixtures/: custom_field.json  workflow_action_master.json  workflow_state.json
norwapricingrule/: hooks.py  requirements.txt  setup.py
norwapricingrule/api/: landed_cost_hooks.py  purchase_receipt_hooks.py
norwapricingrule/fixtures/: custom_field.json  item_group_pricing_profile.json  workflow.json  workflow_action_master.json  workflow_state.json
norwapricingrule/tests/: conftest.py  test_discount.py  test_pricing.py
norwapricingrule/utils/: pricing.py
pricing_rule/discount_management/: discount_approval.py  discount_rules.py
pricing_rule/fixtures/: custom_field.json  workflow.json  workflow_state.json
(+12 files in other folders)
