[project]
name = "discount_control"
authors = [
    { name = "Your Name", email = "manyisanewton26@email.com"}
]
description = "App to manage max discounts per Item Group"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [

    # "frappe~=15.0.0" 
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"